# lab-pp-assignment

./: .gitignore  CMakeLists.txt  README.md  run_all_tests.sh
images/in/: apple.pgm  butterfly.pgm  lion.pgm  woman.pgm  world.pgm
images/in/1024/: bird.pgm  cow.pgm  man.pgm
images/in/256/: bird.pgm  cow.pgm  man.pgm
images/in/512/: bird.pgm  cow.pgm  man.pgm
include/: image_loader.h  morphology.h
src/: image_loader.cpp  main.cpp  morphology_cuda.cpp  morphology_cuda.cu  morphology_cuda_constant.cu  morphology_cuda_global.cu  morphology_cuda_shared.cu  morphology_omp.cpp  morphology_seq.cpp  morphology_utils.cpp
